--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,7 @@
 canna (3.7p3-17) unstable; urgency=high
 
+  * QA upload.
+
   [ Jenkins ]
   * Remove constraints unnecessary since stretch.
 
@@ -18,7 +20,7 @@ canna (3.7p3-17) unstable; urgency=high
     binutils 2.37+ (see #981072). (Closes: #978778)
   * debian/postinst: Use mktemp instead of tempfile (Closes: #992455).
 
- -- Boyuan Yang <byang@debian.org>  Tue, 14 Sep 2021 02:17:31 -0400
+ -- Boyuan Yang <byang@debian.org>  Tue, 14 Sep 2021 02:18:59 -0400
 
 canna (3.7p3-16) unstable; urgency=medium
 
