--- a/README
+++ b/README
@@ -1,5 +1,8 @@
               CANNA Version 3.6, a Japanese input system
 
+Forked version: https://www.nslabs.jp/patch.rhtml
+
+
                              Canna Project
 		     http://canna.sourceforge.jp/
 
