apply debian patches.

--- a/cmd/catdic/cannakill.man
+++ b/cmd/catdic/cannakill.man
@@ -20,7 +20,7 @@
 .\" PERFORMANCE OF THIS SOFTWARE.
 .\"
 .\" $Id: cannakill.man,v 1.2 2002/10/22 15:19:13 aida_s Exp $
-.TH CANNAKILL 1M
+.TH CANNAKILL 1
 .SH "NAME"
 cannakill \- Terminate operation of the Kana-Kanji conversion server
 cannaserver
@@ -29,14 +29,14 @@ cannaserver
 .SH "DESCRIPTION"
 .PP
 cannakill terminates operation of Kana-Kanji conversion server
-cannaserver(1M).  This causes the server to delete the socket and
+cannaserver(1).  This causes the server to delete the socket and
 close all open dictionaries before terminating its processing.
 .PP
-The user who has started cannaserver(1M) or the super user can only
-use cannakill(1M) to terminate operation of canncannaer.
+The user who has started cannaserver(1) or the super user can only
+use cannakill(1) to terminate operation of canncannaer.
 .SH "FILES"
 .IP "@(UnixSockDir)/@(UnixSockName)[:num]" 36
 Socket
 .SH "SEE ALSO"
 .PP
-cannaserver(1M), cannastat(1), cannacheck(1)
+cannaserver(1), cannastat(1), cannacheck(1)
