--- a/lib/RK/RkIntro.man
+++ b/lib/RK/RkIntro.man
@@ -22,7 +22,7 @@
 .\" $Id: RkIntro.man,v 1.1.1.1 2002/10/19 08:27:44 aida_s Exp $ NEC;
 .TH "DICLIBINTRO" "3"
 .SH "NAME"
-\f4DICLib intro\f1 \- dictionary access library introduction
+\f4DICLib_intro\f1 \- dictionary access library introduction
 .SH "DESCRIPTION"
 The dictionary access library provides basic functions for kana-kanji conversion.  The following files are prerequisite to using the dictionary access library:
 .IP "Header file" 
