--- a/cmd/cshost/cshost.man
+++ b/cmd/cshost/cshost.man
@@ -1,5 +1,5 @@
 .TH CSHOST 1
-.SH "NAMES"
+.SH "NAME"
 cshost \- Server access control program for canna
 .SH "SYNOPSIS"
 .B "cshost [{\-cs|\-cannaserver} \fIcannaserver\fP]"
