--- a/lib/RK/RkBgnBun.man
+++ b/lib/RK/RkBgnBun.man
@@ -22,7 +22,7 @@
 .\" $Id: RkBgnBun.man,v 1.1.1.1 2002/10/19 08:27:44 aida_s Exp $ NEC;
 .TH "RKBGNBUN" "3"
 .SH "NAME"
-\f4RkBgnBun\f1 / \f4RkwBgnBun\f1 \- convert the reading of a specified length to kanji
+\f4RkBgnBun\f1, \f4RkwBgnBun\f1 \- convert the reading of a specified length to kanji
 .SH "SYNOPSIS"
 .nf
 .ft 4
