--- a/lib/canna/RkCloseRoma.man
+++ b/lib/canna/RkCloseRoma.man
@@ -22,7 +22,7 @@
 .\" $Id: RkCloseR.man,v 1.1.1.1 2002/10/19 08:27:47 aida_s Exp $ NEC;
 .TH "RkCloseContext" "3"
 .SH "NAME"
-\f4RkCloseRoma\f1 / \f4RkwCloseRoma\f1 \- close the dictionary used for Romaji-kana conversion
+\f4RkCloseRoma\f1 , \f4RkwCloseRoma\f1 \- close the dictionary used for Romaji-kana conversion
 .SH "SYNOPSIS"
 .nf
 .ft 4
