--- a/README
+++ b/README
@@ -1,17 +1,19 @@
 
 Canna 3.7p3 をベースに fork した。https://www.nslabs.jp/patch.rhtml
+
 目標:
  - `canuum/` を削除  -- 伴って, ライセンスから GPL を削除. [済み]
  - `wchar_t` は環境によって幅が違ってポータブルではない。`_WCHAR_T`, `CANNA_NEW_WCHAR_AWARE`, `CANNA_WCHAR16` は無視して, `uint16_t` 決め打ち. 内部コードはEUC-JP. [済み]
  - `lib/RKindep/cksum.c` に4条項BSDライセンス (宣伝条項付き) が適用されていた。ファイルを FreeBSD 由来に入れ替え, 3条項BSDライセンス (MITライセンスと同等) に変更. [済み]
  - `ENGINE_SWITCH` マクロ, `lib/canna/engine.c` 削除. See `misc/engine.cpp`. cannaserver or irohaserver / jserver (Wnn4) / sj3serv (SJ3) の切り替え。すでに正常に動いていない。
  - imake から autoconf & automake に変更.
+   ビルドは通ったが、全然ちゃんと動かない。順にテスト中. See test/README.md
  - Windows にポーティング
 
 
 
 
-              CANNA Version 3.6, a Japanese input system
+              CANNA Version 3.7p3, a Japanese input system
 
                              Canna Project
 		https://ja.osdn.net/projects/canna/
